# Prototypes

./: pyproject.toml
Autointent/GCN/: baseline.py  datasets.md  inspect_dataset.py  mlgcn_model.py  multilabel_tune.py  train.py  tune.py
Autointent/GCN/report/: output.txt
Autointent/GCN/report/Sentence transformers/: output.txt
Autointent/GCN/report/multilabel/: output.txt
Autointent/LinearTest/: datasets.py  linear_test.py
Autointent/LinearTest/report/: output.md
Autointent/hiclass/: datasets.md  download_and_unify.py  generate_custom_dataset.py  report.md  run_comparison.py
Autointent_research/hiclass/: research.py  run_comparison.py
unified_datasets/custom_intents/: test.json  train.json
